10.04.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Now it seems that reading in a file, where data has been deleted is ok.

05.04.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Trying to understand where the problem might be !

03.04.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * I was using one single variable for two different things ! Trying to look
       for where things might be screwed up.

22.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Found things tat was not ok... Still have to correct the fcl_read_bytes
       second case.

21.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Correcting bugs in deleting files (still a huge number of bugs in there)
     * tuning testing values

05.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Deleting bytes
     * simplifying code (is_in_sequence not needed when a boolean values already
       indicates the presence or not).
     * deleting basic test
     * on the difficult road to save the file

03.03.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Working on deleting bytes in buffers

28.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Memory allocation bug corrected
     * "Fancier" libfcltest output

27.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Bug corrections.
     * Freeying memory.
     * Real size of the read buffer (or overwritten buffer).
     * Debug option to the configure script.
     * Killing max buffer size limit.

26.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Now reading seems ok, even when reading at the end of a file
     * Basic overwriting seems to work (need to do inserts to be able to test
       it more)

20.02.2011
   - Olivier Delhomme <olivier.delhomme@free.fr>
     * Reading is ok (merly - still need to do the in between two buffers)
     * overwriting is now at a begining
     * Roadmap change ;-) !

19.02.2011