@@ -27,6 +27,9 @@
  * This library is intented to manage the file at a level that allow one
  * to edit binary files directly without bothering with the memory issues
  * and such.
+ *
+ * @warning The library is certainly not thread safe !
+ *
  */
 
 #ifndef _LIBFCL_H_
